// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedScreen component renders correctly while loading 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": undefined,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={true}
      />
    }
    refreshing={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
  <MediaDetailsModal />
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "uri": "feed_rn_write_post_button",
          }
        }
        style={
          Array [
            Object {
              "bottom": 15,
              "height": 60,
              "position": "absolute",
              "right": 10,
              "width": 60,
            },
            Object {
              "tintColor": undefined,
            },
          ]
        }
      />
      <Image
        source={
          Object {
            "uri": "feed_rn_pencil",
          }
        }
        style={
          Array [
            Object {
              "bottom": 30,
              "height": 35,
              "position": "absolute",
              "right": 24,
              "width": 30,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`FeedScreen component renders correctly while loading with events 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": undefined,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    data={
      Array [
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
      Thanks @azpinstalls for the work, parts, advice and setup.
      #brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 1,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
      Thanks @azpinstalls for the work, parts, advice and setup.
      #brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 2,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={true}
      />
    }
    refreshing={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
            Thanks @azpinstalls for the work, parts, advice and setup.
            #brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 1,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
            Thanks @azpinstalls for the work, parts, advice and setup.
            #brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 2,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <MediaDetailsModal />
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "uri": "feed_rn_write_post_button",
          }
        }
        style={
          Array [
            Object {
              "bottom": 15,
              "height": 60,
              "position": "absolute",
              "right": 10,
              "width": 60,
            },
            Object {
              "tintColor": undefined,
            },
          ]
        }
      />
      <Image
        source={
          Object {
            "uri": "feed_rn_pencil",
          }
        }
        style={
          Array [
            Object {
              "bottom": 30,
              "height": 35,
              "position": "absolute",
              "right": 24,
              "width": 30,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`FeedScreen component renders correctly with events 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": undefined,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    data={
      Array [
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
      Thanks @azpinstalls for the work, parts, advice and setup.
      #brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 1,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
      Thanks @azpinstalls for the work, parts, advice and setup.
      #brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 2,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
            Thanks @azpinstalls for the work, parts, advice and setup.
            #brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 1,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
            Thanks @azpinstalls for the work, parts, advice and setup.
            #brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 2,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <MediaDetailsModal />
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "uri": "feed_rn_write_post_button",
          }
        }
        style={
          Array [
            Object {
              "bottom": 15,
              "height": 60,
              "position": "absolute",
              "right": 10,
              "width": 60,
            },
            Object {
              "tintColor": undefined,
            },
          ]
        }
      />
      <Image
        source={
          Object {
            "uri": "feed_rn_pencil",
          }
        }
        style={
          Array [
            Object {
              "bottom": 30,
              "height": 35,
              "position": "absolute",
              "right": 24,
              "width": 30,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`FeedScreen component renders correctly with modal on top 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": undefined,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    data={
      Array [
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
      Thanks @azpinstalls for the work, parts, advice and setup.
      #brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 1,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
        Object {
          "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
      Thanks @azpinstalls for the work, parts, advice and setup.
      #brz #gt86 #ft86",
          "comments": Array [],
          "commentsCount": 0,
          "createdAt": 1501886235,
          "id": 2,
          "images": Object {
            "default": Object {
              "height": 504,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 640,
            },
            "high_resolution": Object {
              "height": 252,
              "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
              "width": 320,
            },
          },
          "likesCount": 30,
          "source": "instagram",
          "type": "image",
          "user": Object {
            "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
            "id": "220971565",
            "name": "Test Name",
            "userName": "applicaster",
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={true}
      />
    }
    refreshing={true}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
            Thanks @azpinstalls for the work, parts, advice and setup.
            #brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 1,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <EventContainer
          event={
            Object {
              "caption": "Low. Tarmac T2 , CasCam, SPC LCAs.
            Thanks @azpinstalls for the work, parts, advice and setup.
            #brz #gt86 #ft86",
              "comments": Array [],
              "commentsCount": 0,
              "createdAt": 1501886235,
              "id": 2,
              "images": Object {
                "default": Object {
                  "height": 504,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s640x640/sh0.08/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 640,
                },
                "high_resolution": Object {
                  "height": 252,
                  "url": "https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/20590092_108583273161709_7296810043293302784_n.jpg",
                  "width": 320,
                },
              },
              "likesCount": 30,
              "source": "instagram",
              "type": "image",
              "user": Object {
                "avatarImageUrl": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
                "id": "220971565",
                "name": "Test Name",
                "userName": "applicaster",
              },
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <MediaDetailsModal />
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "uri": "feed_rn_write_post_button",
          }
        }
        style={
          Array [
            Object {
              "bottom": 15,
              "height": 60,
              "position": "absolute",
              "right": 10,
              "width": 60,
            },
            Object {
              "tintColor": undefined,
            },
          ]
        }
      />
      <Image
        source={
          Object {
            "uri": "feed_rn_pencil",
          }
        }
        style={
          Array [
            Object {
              "bottom": 30,
              "height": 35,
              "position": "absolute",
              "right": 24,
              "width": 30,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`FeedScreen component renders correctly without events 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": undefined,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={4}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onEndReachedThreshold={1}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View />
  </RCTScrollView>
  <MediaDetailsModal />
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "uri": "feed_rn_write_post_button",
          }
        }
        style={
          Array [
            Object {
              "bottom": 15,
              "height": 60,
              "position": "absolute",
              "right": 10,
              "width": 60,
            },
            Object {
              "tintColor": undefined,
            },
          ]
        }
      />
      <Image
        source={
          Object {
            "uri": "feed_rn_pencil",
          }
        }
        style={
          Array [
            Object {
              "bottom": 30,
              "height": 35,
              "position": "absolute",
              "right": 24,
              "width": 30,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;
